# python-binexport

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  testing.yml
binexport/: __init__.py  basic_block.py  binexport2_pb2.py  expression.py  function.py  instruction.py  loader.py  operand.py  program.py  types.py  utils.py
src/binexport/: __init__.py  __main__.py  basic_block.py  expression.py  function.py  instruction.py  operand.py  program.py  types.py  utils.py
tests/: test_core.py
tests/data/: MachO-OSX-ppc-and-i386-bash.BinExport  MachO-OSX-ppc-openssl-1.0.1h.BinExport  MachO-OSX-x64-ls.BinExport  MachO-OSX-x86-ls.BinExport  MachO-iOS-arm1176JZFS-bash.BinExport  MachO-iOS-armv7-armv7s-arm64-Helloworld.BinExport  MachO-iOS-armv7s-Helloworld.BinExport  elf-FreeBSD-x86_64-echo.BinExport  elf-HPUX-ia64-bash.BinExport  elf-Haiku-GCC2-ls.BinExport  elf-Haiku-GCC7-WebPositive.BinExport  elf-Linux-ARM64-bash.BinExport  elf-Linux-ARMv7-ls.BinExport  elf-Linux-Alpha-bash.BinExport  elf-Linux-Mips4-bash.BinExport  elf-Linux-PowerPC-bash.BinExport  elf-Linux-SparcV8-bash.BinExport  elf-Linux-SuperH4-bash.BinExport  elf-Linux-hppa-bash.BinExport  elf-Linux-ia64-bash.BinExport  elf-Linux-lib-x64.so.BinExport  elf-Linux-lib-x86.so.BinExport  elf-Linux-s390-bash.BinExport  elf-Linux-x64-bash.BinExport  elf-Linux-x86-bash.BinExport  elf-NetBSD-x86_64-echo.BinExport  elf-OpenBSD-x86_64-sh.BinExport  elf-solaris-sparc-ls.BinExport  elf-solaris-x86-ls.BinExport  libSystem.B.dylib.BinExport
