[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-binexport"
version = "0.1.0"
description = "Python wrapper to manipulate binexport files (protobuf)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Quarkslab", email = "diffing@quarkslab.com" }]
dependencies = [
    "python-magic",
    "python-magic-bin; os_name=='nt'",
    "click",
    "protobuf",
    "networkx",
    "enum_tools",
]
classifiers = [
    'Topic :: Security',
    'Environment :: Console',
    'Operating System :: OS Independent',
]

[project.urls]
Homepage = "https://github.com/quarkslab/python-binexport"
Repository = "https://github.com/quarkslab/python-binexport"
Documentation = "https://quarkslab.github.io/diffing-portal/exporter/binexport.html#python-binexport"
"Bug Tracker" = "https://github.com/quarkslab/python-binexport/issues"

[project.optional-dependencies]
idascript = ["idascript"]

[tools.setuptools]
script-files = ["bin/binexporter"]

[tool.black]
line-length = 100
target-version = ['py310']
