[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-binexport"
version = "0.4.0"
description = "Python wrapper to manipulate binexport files (protobuf)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Quarkslab", email = "diffing@quarkslab.com" }]
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"
dependencies = [
    "python-magic; os_name!='nt'",
    "python-magic-bin; os_name=='nt'",
    "click",
    "protobuf",
    "networkx",
    "enum_tools",
    "idascript",
]
classifiers = [
    'Topic :: Security',
    'Environment :: Console',
    'Operating System :: OS Independent',
]

[project.urls]
Homepage = "https://github.com/quarkslab/python-binexport"
Repository = "https://github.com/quarkslab/python-binexport"
Documentation = "https://quarkslab.github.io/diffing-portal/exporter/binexport.html#python-binexport"
"Bug Tracker" = "https://github.com/quarkslab/python-binexport/issues"

[project.scripts]
binexporter = 'binexport.__main__:main'

[tool.black]
line-length = 100
target-version = ['py310']
